# lilakosha

./: .gitignore  README.md  example.env  inspect-cdm-records.sh  inspect-char-names.sh  lilakosha-digest-20260628172000.txt  main.py  pyproject.toml  run.sh  watch-cdm.sh
cdm/: __init__.py  core.py  ledger_index.py  meta.py  models.py  refine.py
config/: 10-init.yml  30-prepare.yml  60-train-and-bake-lilakosha-1g-12b-g.yml  61-train-and-bake-lilakosha-1g-12b-u.yml  lilakosha-g1-12b-g.yaml  lilakosha-g1-12b-u.yaml
doc/: cdm.md  design.md  operator.md
inference/: __init__.py  contract.py  models.py  openai.py
pipeline/: 10-init.yml  20-ingest.yml  20260229000000-refine copy.yml  20260229105000-refine.yml  20260229173000-refine.yml  20260230080000-refine.yml  20260230083000-refine.yml  20260630080000-refine.yml  20260630083000-refine.yml  20260630151500-refine.yml  20260630202000-refine.yml  20260630203000-refine.yml  20260701150000-refine.yml  20260701214500-refine.yml  20260702083000-refine.yml  20260703084500-refine.yml  20260703154500-refine.yml  20260703190000-refine.yml  20260703200000-refine.yml  20260704002000-refine.yml  20260704004000-refine.yml  20260704114500-refine.yml  20260704123000-refine.yml  20260704171500-refine.yml  20260704183000-refine.yml  20260704234500-refine.yml  20260705104500-refine.yml  20260705113500-refine.yml  20260705135000-refine.yml  20260705145000-refine.yml  20260705163000-refine.yml  20260705173000-refine.yml  20260705211500-refine.yml  20260705235000-refine.yml  20260706073000-refine.yml  20260706213000-refine.yml  20260707154500-refine.yml  20260708124500-refine.yml  (+34 more)
(+108 files in other folders)
