[project]
name = "lilakosha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"] # Error, Pyflakes, Isort
ignore = []

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
